[gd_scene load_steps=3 format=2]

[ext_resource path="res://interface/VisionMode.gd" type="Script" id=1]
[ext_resource path="res://sounds/night_vision_toggle.wav" type="AudioStream" id=2]

[node name="VisionMode" type="CanvasModulate"]
scale = Vector2( 1, 1.00195 )
color = Color( 0.117647, 0.117647, 0.117647, 1 )
script = ExtResource( 1 )

[node name="NightVisionAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="NightVisionTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true
[connection signal="timeout" from="NightVisionTimer" to="." method="_on_NightVisionTimer_timeout"]
